--- a/Class2/Labs/Loops - Intermediate.ipynb
+++ b/Class2/Labs/Loops - Intermediate.ipynb
@@ -17,20 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "location = '/Users/rsharmeen/Downloads'\n",
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +60,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('John', 34, None),\n",
+       " ('William', 35, None),\n",
+       " ('Barbara', 42, None),\n",
+       " ('Harold', 52, None)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "damaged_users = []\n",
+    "\n",
+    "for user in users:\n",
+    "    for item in user:\n",
+    "        if item == None:\n",
+    "            damaged_users.append(user)\n",
+    "damaged_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('John', 34, None),\n",
+       " ('William', 35, None),\n",
+       " ('Barbara', 42, None),\n",
+       " ('Harold', 52, None)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "damaged_users = []\n",
+    "\n",
+    "for user in users:\n",
+    "    if None in user:\n",
+    "        damaged_users.append(user)\n",
+    "damaged_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('John', 34, None),\n",
+       " ('William', 35, None),\n",
+       " ('Barbara', 42, None),\n",
+       " ('Harold', 52, None)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "damaged_users = []\n",
+    "\n",
+    "for user in users:\n",
+    "    if not all(user):\n",
+    "        damaged_users.append(user)\n",
+    "damaged_users"
    ]
   },
   {
@@ -93,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +213,7 @@
        "['bear', 'baboon', 'bat']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +245,28 @@
        "['bear', 'baboon', 'bat']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newitem = [item for item in animals if item[0] == 'b']\n",
+    "newitem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bear', 'baboon', 'bat']"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,11 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your answer here"
+    "number_equals = 0\n",
+    "for item1, item2 in zip(list1, list2):\n",
+    "    if item1 == item2:\n",
+    "        number_equals+=1\n",
+    "print(number_equals)"
    ]
   },
   {
@@ -311,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,12 +419,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.535653752852738"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "sqrt(sum([(a-b)**2 for a,b in zip(val1, val2)]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your answer here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
